--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,7 +77,10 @@ body {
             }
 
             .underline {
-               @apply absolute -bottom-1 left-0 w-0 h-0.5 bg-white transition-all duration-300 group-hover:w-full;
+               @apply absolute -bottom-1 left-0 w-0 h-0.5 bg-white rounded-2xl transition-all duration-300 group-hover:w-[90%];
+            }
+            .active-underline {
+               @apply absolute -bottom-1 left-0 w-0 h-0.5 bg-white rounded-2xl transition-all duration-300 w-[90%];
             }
          }
       }
@@ -480,4 +483,14 @@ body {
 
 .no-visible-scrollbar::-webkit-scrollbar {
    display: none;
+}
+
+.nav a .marker {
+   position: absolute;
+   width: 100%;
+   bottom: 0;
+   left: 0;
+   right: 0;
+   height: 2px;
+   background-color: white;
 }
